Fixes the Newscoop menubar's visibility

--- a/app/styles/newscoop.less
+++ b/app/styles/newscoop.less
@@ -58,11 +58,12 @@
 
 #cs-specific .navbar {
     border-radius: 0px;
-    min-height: inherit;
+    min-height: 38px;
     margin-bottom: 0px;
 }
 
 #cs-specific .navbar-collapse {
+    min-height: inherit;
     padding-left: 0px;
 }
 
